setting up again

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "Chrisdes-99.github.io/ToDoList-New-",
+  "homepage": "https://Chrisdes-99.github.io/ToDoList-New-/",
   "dependencies": {
     "gh-pages": "^6.1.1"
   },
