--- a/todo/package.json
+++ b/todo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo",
-  "homepage": "Chrisdes-99.github.io/ToDoList-New-",
+  "homepage": "https://Chrisdes-99.github.io/ToDoList-New-/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
